# flightpath

./: DGI_TRANSFORMATION_TITANIC.ipynb  FLIGHTPATH_MANIFESTO.md  MANIFESTO.md  README.md  model_training_workflow.ipynb  pyproject.toml
agentOS_notes/: Primes, Pi, and Quantum Cryptography.md
dgi_sdk/: __init__.py  core.py  inquiry.py  utils.py
dgi_sdk/examples/: sample_task_grid.py  strategic_alignment.py  titanic_survival.py
hand_notes/: DGI, Riemann, and AI Manifest.md  Private Technical Paper Outline.md
tests/: core_test.py
